syntax = "proto3";
package sources;

service SourcesService {
    rpc GetSourcesList(GetSourcesListRequest) returns (GetSourcesListResponse) {

    }

    rpc GetSourceById(GetSourceByIdRequest) returns (GetSourceByIdResponse) {

    }

    rpc SearchSources(SearchSourcesRequest) returns (SearchSourcesResponse) {

    }

    rpc Subscribe(SubscribeRequest) returns (SubscribeResponse) {

    }

    rpc Unsubscribe(UnsubscribeRequest) returns (UnsubscribeResponse) {

    }

    rpc MoveToFolder(MoveToFolderRequest) returns (MoveToFolderResponse) {

    }

    rpc SearchTags(SearchTagsRequest) returns (SearchTagsResponse) {

    }

    rpc SetSourceTags(SetSourceTagsRequest) returns (SetSourceTagsResponse) {

    }
}

message GetSourcesListRequest {

}

message SourceWithMeta {
    Source source = 1;
    int32 folder_id = 2;
    repeated string tags = 3;
}

message GetSourcesListResponse {
    repeated SourceWithMeta sources = 1;
}

message SearchSourcesRequest {
    string query = 1;
}

message Source {
    int32 id = 1;
    string name = 2;
    string origin = 3;
    string kind = 4;
    string image = 5;
    int64 last_scrape_time = 6;
    string external_link = 7;
}

message SearchSourcesResponse {
    repeated Source sources = 1;
}

message SubscribeRequest {
    int32 source_id = 1;
}

message SubscribeResponse {

}

message UnsubscribeRequest {
    int32 source_id = 1;
}

message UnsubscribeResponse {

}

message MoveToFolderRequest {
    int32 source_id = 1;
    int32 folder_id = 2;
}

message MoveToFolderResponse {

}

message GetSourceByIdRequest {
    int32 id = 1;
}

message GetSourceByIdResponse {
    SourceWithMeta source = 1;
}


message SearchTagsRequest {
    string search = 1;
    int32 limit = 2;
}

message SearchTagsResponse {
    repeated string tags = 1;
}

message SetSourceTagsRequest {
    int32 source_id = 1;
    repeated string tags = 2;
}

message SetSourceTagsResponse {

}